--- a/css/header.css
+++ b/css/header.css
@@ -21,6 +21,13 @@
   text-decoration: none;
   color: #141414;
   display: block;
+  background: #f5f5f5;
+  border-radius: 4px;
+  border: 2px solid transparent;
+}
+
+.header-menu a:hover {
+  border: 2px solid #141414;
 }
 
 @media (max-width: 800px) {
